fix(menu): when dropdown is rendered upwards from trigger, do not cover the trigger
Instead of the dropdown extending upwards from the bottom of the trigger, covering the trigger
element, make it extend upwards from the top of the trigger.

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -35,12 +35,12 @@ $menu-item-background-color: #ebebeb;
         }
 
         &:not(.limel-portal--fixed) {
+            z-index: -999999;
             position: absolute;
-
-            :host(*[open-direction='left']) & {
-                right: 0;
-                bottom: 0;
-            }
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
         }
     }
 }
